Fix "report the exception" in Custom Elements V1

There are 2 places the spec uses "report the exception"[1]:

1. The document parser invokes constructors synchronously.
2. Upgrade.

Currently Blink has 2 different code paths for each, and each has
different issues:
1. The synchronous constructor uses SetVerbose(true), which works for
   thrown exceptions, but ExceptionState::throwIfNeeded() only puts
   the exception into pending exceptions, which will be cleared when
   TryCatch scope exits.
2. Upgrade fires error events and calls
   ExecutionContext::reportException() to avoid it, but it always uses
   NotSharableCrossOrigin. This works in run-layout-test where the
   origin has m_unversalAccess, but not in, for instance, file URL.

This patch unifies the 2 code paths.

[1] https://html.spec.whatwg.org/multipage/webappapis.html#report-the-exception

BUG=632940

Review-Url: https://codereview.chromium.org/2244203002
Cr-Commit-Position: refs/heads/master@{#413421}

Former-commit-id: 8b406045bb585b6a4bc7808d15df7070ba6e93ca